@@ -2,6 +2,7 @@
 #include <dirent.h>
 #include <sys/stat.h>
 #include <stdio.h>
+#include <string.h>
 #include <config.h>
 #include "prettytable.h"
 
