@@ -1,3 +1,13 @@
+2001-07-09 Kevin Vandersloot <kfv101@psu.edu>
+
+	*interface.c (create_main_window): change signal for info
+	button to clicked instead of pressed so it works using the 
+	keyboard. 
+	Also make the More Info and Less Info labels saner
+	and make sure if the info is already shown at startup set the
+	label to Less Info.
+	Some cosmetic inprovements to the progress meters.
+
 2001-07-08 Kevin Vandersloot <kfv101@psu.edu>
 
 	*proctable.c: add process status column
